<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Notekeeper</string>
    <string name="settings">Settings</string>
    <string name="lessons_title">Lessons</string>
    <string name="details_title">Lesson details</string>
    <string name="schedule_title">Schedule</string>
    <string name="add_group">Add group</string>
    <string name="add_course">Add course</string>
    <string name="add_note">Add note</string>
    <string name="add_question">Add question</string>
    <string name="add_exam">Add exam</string>
    <string name="year_no">Year %d</string>
    <string name="notes">Notes</string>
    <string name="questions">Questions</string>
    <string name="notes_no">Notes: %d</string>
    <string name="questions_no">Questions: %d</string>
    <string name="history_last_change">Last change by %1$s on %2$s</string>
    <string name="history_entry">User %1$s %2$s at %3$s</string>
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="year">Year</string>
    <string name="error_empty">Please fill in this field</string>
    <string name="error_too_long">Submitted text is too long</string>
    <string name="error_number_too_large">%s is too large, please insert smaller number</string>
    <string name="error_negative_number">%s should be positive</string>
    <string name="note">Note</string>
    <string name="lesson">Lesson</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="group_name">Group name</string>
    <string name="group_place">Place</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="select_image">Select image using…</string>
    <string name="select_audio">Select audio using…</string>
    <string name="undo">Undo</string>
    <string name="course_hidden">Course hidden</string>
    <string name="lesson_hidden">Lesson hidden</string>
    <string name="notes_hidden">Notes hidden</string>
    <string name="questions_hidden">Questions hidden</string>
    <string name="exam_hidden">Exam hidden</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="hide">Hide</string>
    <string name="rename_lesson">Rename lesson: </string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="filter">Filter</string>
    <string name="filter_courses">Filter courses: </string>
    <string name="raspored">Schedule</string>
    <string name="prop_date">Date: </string>
    <string name="prop_subject">Subject: </string>
    <string name="prop_lessons">Lesson(s): </string>
    <string name="prop_type">Type: </string>
    <string name="prop_class">Class: </string>
    <string name="prop_teacher">Teacher: </string>
    <string name="close">Close</string>
    <string name="select_course">Select course…</string>
    <string name="course">Course</string>
    <string name="klass">Class</string>
    <string name="type">Type</string>
    <string name="show_all">Show all</string>
    <string name="join_group">Join group</string>
    <string name="note_image_desc">Image attached to the note</string>
    <string name="question_image_desc">Image attached to the question</string>
    <string name="play_audio">Play recording</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="member_list">Group members</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="email_duplicate">There is an account with this email</string>
    <string name="unexpected_server_error">Unexpected error</string>
    <string name="ok">OK</string>
    <string name="error_default_bad_request">Error: 400 Bad request. Please report this.</string>
    <string name="error_default_unauthorized">Error: 401 unauthorized. Please report this.</string>
    <string name="error_default_ok">200 OK, everything seems ok. Please tell me if you ever see this.</string>
    <string name="error_default_created">201 Created, everything seems ok. Please tell me if you ever see this.</string>
    <string name="error_default_forbidden">Error: 403 Forbidden. Please report this.</string>
    <string name="error_default_not_found">Error: 404 Not found. Please report this.</string>
    <string name="error_default_conflict">Error: 409 Conflict. Please report this.</string>
    <string name="error_default_gone">Error: 410 Gone. Please report this.</string>
    <string name="error_default_server_error">Error: 500 Server error. Please report this.</string>
    <string name="error_default_unknown">Something has gone really wrong. You shouldn\'t see this, but if you do, please tell me.</string>
    <string name="wrong_creds">Username or password don\'t match. Please check, then try again</string>
    <string name="wrong_creds_title">Login unsuccessful</string>
    <string name="error_session_expired_title">Session Expired</string>
    <string name="error_session_expired_text">Please log in again</string>
    <string name="error_insufficient_permissions_title">Insufficient permissions</string>
    <string name="error_insufficient_permissions_text">You aren\'t trying to do something you know you can\'t, are you? If you don\'t know what\'s going on, please report this.</string>
    <string name="error_server_error_title">Server error</string>
    <string name="error_server_error_text">Server is reporting an unknown error. Please report this.</string>
    <string name="error_not_found_title">Not found</string>
    <string name="error_not_found_text">Server says it can\'t find what I am looking for, which is weird. Please report this.</string>
    <string name="error_duplicate_title">Duplicate</string>
    <string name="error_duplicate_text">Server complains about a duplicate. If you don\'t know what\'s going on, please report this.</string>
    <string name="error_bad_request_title">Bad request</string>
    <string name="error_bad_request_text">Server says it can\'t understand me, which is weird. Please report this.</string>
    <string name="error_json_title">JSON error</string>
    <string name="error_json_text">Server is drunk (or I messed up something badly). Please report this.</string>
    <string name="error_offline_title">You\'re offline</string>
    <string name="error_offline_text">That means you won\'t see any new changes, though you can still browse any data you have already seen</string>
    <string name="error_changed_offline_title">You have gone offline</string>
    <string name="error_changed_offline_text">This means you won\'t be able to add new stuff or refresh until you reconnect</string>
    <string name="error_socketex_title">Network exception</string>
    <string name="error_socketex_text">Something is wrong with the network, or the server is unavailable. Please report this.</string>
    <string name="error_fileex_title">File exception</string>
    <string name="error_fileex_text">I\'m having some troubles with files… Please report this.</string>
    <string name="error_unknown_ioex_title">Unknown I/O Exception</string>
    <string name="error_unknown_ioex_text">Something is wrong with the files or the network. Please report this.</string>
    <string name="error_offline_edit_title">You\'re offline</string>
    <string name="error_offline_edit_text">You cannot make any changes while you\'re offline (for now).</string>
    <string name="error_unknown_ex_title">Unknown exception</string>
    <string name="error_unknown_ex_text">Something has gone very wrong. Please report this.</string>
    <string name="error_offline_memberlist_title">You\'re offline</string>
    <string name="error_offline_memberlist_text">You can\'t view member list while you\'re offline. Please connect to the internet and try again.</string>
    <string name="error_offline_register_title">You\'re offline</string>
    <string name="error_offline_register_text">To register a new account, you need to be online. Please connect to the internet and try again.</string>
    <string name="error_login_socketex_title">Server unreachable</string>
    <string name="error_login_socketex_text">Something is wrong with the network. You will be logged in as an offline user. Please report this.</string>
    <string name="error_login_unknownex_title">Something is wrong…</string>
    <string name="error_login_unknownex_text">And I don\'t know what. You\'ll be logged in as an offline user. Please report this.</string>
    <string name="error_wrong_password_title">Wrong password</string>
    <string name="error_wrong_password_text">The password you entered is incorrect.</string>
<string name="error_offline_search_title">You\'re offline</string>
    <string name="error_offline_search_text">Search is unavailable while you\'re offline. Please connect to the internet and try again.</string>
    <string name="confirm_join_group_title">Join group?</string>
    <string name="confirm_join_group_message">Only members can add new items and see exams and audio recordings</string>
    <string name="confirm_remove_notes_title">Are you sure you want to remove these notes?</string>
    <string name="confirm_remove_notes_message">If you remove them, they are gone forever; no one will be able to see them anymore (you can use the hide button to remove them only for you)</string>
    <string name="confirm_remove_plural">I\'m sure, remove them</string>
    <string name="confirm_remove_singular">I\'m sure, remove it</string>
    <string name="confirm_remove_questions_title">Are you sure you want to remove these questions?</string>
    <string name="confirm_remove_questions_message">If you remove them, they are gone forever; no one will be able to see them anymore (you can use the hide button to remove them only for you)</string>
    <string name="confirm_remove_lesson_title">Are you sure you want to remove this lesson?</string>
    <string name="confirm_remove_lesson_message">If you remove it, all its data is gone forever, including all notes and questions; no one will be able to see it anymore (you can swipe it away to hide it only for you)</string>
    <string name="confirm_remove_course_title">Are you sure you want to remove this course?</string>
    <string name="confirm_remove_course_message">If you remove it, all its data is gone forever, including all lessons, notes and questions; no one will be able to see it anymore (you can swipe it away to hide it only for you)</string>
    <string name="confirm_revoke_write_title">Kick member?</string>
    <string name="confirm_revoke_write_text">This will remove user from the group. Are you sure you want to proceed?</string>
    <string name="confirm_revoke_write_positive">Yes, kick</string>
    <string name="confirm_leave_group_title">Leave group?</string>
    <string name="confirm_leave_group_text">After you leave the group, you won\'t be able to add new items or view exam notes and questions</string>
    <string name="remove_course_disabled_title">You can\'t remove course from here</string>
    <string name="remove_course_disabled_message">Removing courses from here isn\'t supported yet, but I\'m glad you tried!</string>
    <string name="role_mod">Mod</string>
    <string name="name">Name</string>
    <string name="role_member_abbrev">Mem</string>
    <string name="role_owner_abbrev">Own</string>
    <string name="your_profile_image">Your profile image</string>
    <string name="register_underlined"><u>Register</u></string>
    <string name="register_legal_text">By registering for an account, I agree to the <a href="http://notekeep.me/eula">EULA</a> and <a href="http://notekeep.me/pp">Privacy Policy</a></string>
</resources>