<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/raspored_kontrolnih"
        android:icon="@drawable/list_white"
        android:title="@string/raspored"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/member_list"
        android:icon="@drawable/ic_people"
        android:title="@string/member_list"
        app:showAsAction="always|withText"/>
    <!-- withText? -->
    <item android:id="@+id/filter_courses"
          android:icon="@drawable/filter"
          android:title="@string/filter"
          app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/show_all"
        android:title="@string/show_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>