<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_padding_vertical"
            android:paddingLeft="@dimen/layout_padding_horizontal"
            android:paddingRight="@dimen/layout_padding_horizontal"
            android:paddingTop="@dimen/layout_padding_vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_exam_course_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_exam_course_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/course"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_exam_lesson_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_exam_lesson_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lesson"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_exam_class_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_exam_class_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/klass"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_exam_type_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_exam_type_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <include style="@style/long_button_position"
                     layout="@layout/button_date"
                     android:layout_marginTop="@dimen/addview_date_margin_top"/>

            <include
                style="@style/small_button_position"
                layout="@layout/button_add"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>