<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_vertical"
        android:paddingLeft="@dimen/layout_padding_horizontal"
        android:paddingRight="@dimen/layout_padding_horizontal"
        android:paddingTop="@dimen/layout_padding_vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_course_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_course_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_course_prof_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_course_name_til">

            <EditText
                android:id="@+id/add_course_prof_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_course_year_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_course_prof_til">

            <EditText
                android:id="@+id/add_course_year_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <include
            layout="@layout/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/add_course_year_til"
            android:layout_marginTop="@dimen/button_margin_top" />
    </RelativeLayout>
</ScrollView>