<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/login_margin_horizontal"
        android:layout_marginRight="@dimen/login_margin_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"/>
        </android.support.design.widget.TextInputLayout>

        <include
            style="@style/long_button_position"
            layout="@layout/button_login"
            android:layout_marginTop="@dimen/button_margin_top"/>

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/login_cpv"
            android:layout_width="@dimen/submit_cpv_size"
            android:layout_height="@dimen/submit_cpv_size"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true"
            />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/register_margin_top"
            android:text="@string/register_underlined"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/register_text_size"/>

    </LinearLayout>
</LinearLayout>