<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/user_info_image"
            android:layout_width="@dimen/user_info_image_size"
            android:layout_height="@dimen/user_info_image_size"
            android:src="@drawable/default_user"
            android:contentDescription="@string/your_profile_image"
            android:layout_marginTop="@dimen/user_info_image_margin_top"
            android:layout_marginEnd="@dimen/user_info_image_margin_right"
            android:layout_marginRight="@dimen/user_info_image_margin_right"/>

        <TextView
            android:id="@+id/user_info_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_toEndOf="@id/user_info_image"
            android:layout_toRightOf="@id/user_info_image"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/user_info_text_padding"
            android:paddingBottom="@dimen/user_info_text_padding"/>
        <TextView
            android:id="@+id/user_info_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_info_image"
            android:layout_toEndOf="@id/user_info_image"
            android:layout_below="@id/user_info_username_label"
            android:textSize="@dimen/user_info_text_size"
            android:paddingTop="@dimen/user_info_text_padding"
            android:paddingBottom="@dimen/user_info_text_padding"/>

        <TextView
            android:id="@+id/user_info_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_toEndOf="@id/user_info_image"
            android:layout_toRightOf="@id/user_info_image"
            android:layout_marginTop="@dimen/user_info_text_gap"
            android:layout_below="@id/user_info_username"
            android:textSize="@dimen/user_info_text_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/user_info_text_padding"
            android:paddingBottom="@dimen/user_info_text_padding"/>
        <TextView
            android:id="@+id/user_info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_info_image"
            android:layout_toEndOf="@id/user_info_image"
            android:layout_below="@id/user_info_email_label"
            android:textSize="@dimen/user_info_text_size"
            android:paddingTop="@dimen/user_info_text_padding"
            android:paddingBottom="@dimen/user_info_text_padding"/>
    </RelativeLayout>

</LinearLayout>